<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/hintAmount"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pax" />

        <EditText
            android:id="@+id/editPax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/hintPax"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gstText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gst" />

            <ToggleButton
                android:id="@+id/toggleGST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gstEnabled"
                android:textOff="@string/gstDisabled"
                android:textOn="@string/gstEnabled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/serviceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service" />

            <ToggleButton
                android:id="@+id/toggleService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gstEnabled"
                android:textOff="@string/serviceDisabled"
                android:textOn="@string/serviceEnabled" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/displayTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayAmount"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/displaySplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displaySplit"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/splitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splitBtn" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>
